# message-compiler

./: .gitignore  CandidateSelection.hs  Compression.hs  Digram.hs  EnnGram.hs  InputText.hs  LICENSE  Main.hs  Naive.hs  README.org  Reader.hs  TestDigram.hs  TestEnnGramMap.hs  UnitTests.hs  Utils.hs  message-compiler.cabal  opt5.hs
app/: Main.hs
src/: CandidateSelection.hs  Compression.hs  Digram.hs  EnnGram.hs  InputText.hs  Reader.hs  TestDigram.hs  TestNaive.hs  TopFunctions.hs  Utils.hs
test/: Properties.hs  Suite.hs  TestCandSel.hs  TestDigram.hs  TestEnnGramMap.hs
