name:                message-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pcrama/message-compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Philippe Crama
maintainer:          pcfeb0009@gmx.com
copyright:           2017
category:            exercise
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

executable message-compiler
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.1.1 && < 1
                     , array >= 0.5.1.1 && < 1
                     , containers >= 0.5.7.1 && < 1
                     , message-compiler

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.1.1 && < 1
                     , bytestring >= 0.10.1.1 && < 1
                     , containers >= 0.5.7.1 && < 1
                     , stringsearch >= 0.3.6.6 && < 1
  exposed-modules:     CandidateSelection
                     , Compression
                     , Digram
                     , EnnGram
                     , InputText
                     , Reader
                     , TopFunctions
                     , Utils

test-suite reference
  hs-source-dirs:      test
  main-is:             Suite.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.1.1 && < 1
                     , bytestring >= 0.10.1.1 && < 1
                     , containers >= 0.5.7.1 && < 1
                     , stringsearch >= 0.3.6.6 && < 1
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , HUnit
                     , QuickCheck
                     , message-compiler
  other-modules:       TestDigram
                     , TestEnnGramMap
                     , TestCandSel
                     , Properties

-- Profiling (from stackoverflow):
-- stack build --profile --executable-profiling --library-profiling
-- stack exec -- message-compiler +RTS -p

-- Local Variables:
-- compile-command: "stack build"
-- End:
